--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     command: bash bash.sh
     environment:
-      API_ID: # Your API HASH from my.telegram.org
+      API_ID: 5850079353:AAEtzh4eVgxOhgITUNKgUxVy0J9zo4U_oZA# Your API HASH from my.telegram.org
       API_HASH: # Your API ID from my.telegram.org
       BOT_TOKEN: # Bot token, get it from @BotFather 
       SESSION: # Pyrogram string session
