--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       API_ID: # Your API HASH from my.telegram.org
       API_HASH: # Your API ID from my.telegram.org
-      BOT_TOKEN: # Bot token, get it from @BotFather 
+      BOT_TOKEN: 5850079353:AAEtzh4eVgxOhgITUNKgUxVy0J9zo4U_oZA  # Bot token, get it from @BotFather 
       SESSION: # Pyrogram string session
       AUTH: # User ID of Bot owner
       FORCESUB: # Username name of public channel without using '@'
